@@ -1,9 +1,10 @@
 package com.crschnick.pdxu.app.info.stellaris;
 
+import com.crschnick.pdxu.app.core.AppI18n;
 import com.crschnick.pdxu.app.gui.game.GameImage;
 import com.crschnick.pdxu.app.info.SavegameData;
 import com.crschnick.pdxu.app.info.SimpleInfoComp;
-import com.crschnick.pdxu.app.lang.PdxuI18n;
+
 import com.crschnick.pdxu.io.savegame.SavegameContent;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
@@ -23,7 +24,7 @@ public class StellarisFleetsComp extends SimpleInfoComp {
     @Override
     public Region create(SavegameData<?> data) {
         var r = super.create(data);
-        var img = (ImageView) ((StackPane) ((Label) ((StackPane) r).getChildren().get(0)).getGraphic()).getChildren().get(0);
+        var img = (ImageView) ((StackPane) ((Label) ((StackPane) r).getChildren().getFirst()).getGraphic()).getChildren().getFirst();
         img.fitWidthProperty().unbind();
         img.fitHeightProperty().unbind();
         img.setFitWidth(25);
@@ -43,6 +44,6 @@ public class StellarisFleetsComp extends SimpleInfoComp {
 
     @Override
     protected String getTooltip() {
-        return PdxuI18n.get("FLEETS");
+        return AppI18n.get("fleets");
     }
 }
